add some haskell notes

--- a/haskell/base.org
+++ b/haskell/base.org
@@ -443,3 +443,26 @@ main = print $ email patientWithChangedEmail
       , hasInsurance = True
     }
 #+end_src
+
+=Новый тип=
+
+Тип, определяемый с помощью слова newtype, обязан иметь один и только один конструктор значения.
+В таком типе должно быть одно и лишь одно поле.
+#+begin_src haskell
+newtype IPAddress = IP String
+#+end_src
+
+=type vs newtype=
+
+Когда мы пишем так:
+#+begin_src haskell
+type String = [Char]
+#+end_src
+мы объявляем: «Тип ~String~ — это эквивалентная замена типу ~[Char]~ ». И поэтому везде, где в коде стоит ~[Char]~, мы можем поставить ~String~, и везде, где стоит ~String~, мы можем поставить ~[Char]~.
+
+Когда же мы пишем так:
+#+begin_src haskell
+newtype MyInt = MyInt Int
+#+end_src
+мы объявляем: «Тип ~MyInt~ — это новый тип, представление которого такое же, как у типа ~Int~ ».
+Мы не можем просто взять и поставить ~MyInt~ на место ~Int~, потому что эти типы равны лишь с точки зрения представления в памяти, с точки зрения системы типов они абсолютно различны.
