add some haskell notes

--- a/haskell/base.org
+++ b/haskell/base.org
@@ -466,3 +466,17 @@ newtype MyInt = MyInt Int
 #+end_src
 мы объявляем: «Тип ~MyInt~ — это новый тип, представление которого такое же, как у типа ~Int~ ».
 Мы не можем просто взять и поставить ~MyInt~ на место ~Int~, потому что эти типы равны лишь с точки зрения представления в памяти, с точки зрения системы типов они абсолютно различны.
+
+=Опциональный тип=
+
+Опциональным (англ. optional) называют такой тип, внутри которого либо есть нечто полезное, либо нет.
+#+begin_src haskell
+data Optional = NoSuchChapter
+              | Chapter String
+#+end_src
+
+=Может быть=
+
+#+begin_src haskell
+data Maybe a = Nothing | Just a
+#+end_src
