add some notes about haskells lists

--- a/haskell/base.org
+++ b/haskell/base.org
@@ -140,11 +140,44 @@ main = putStrLn (head ["Vim", "Emacs", "Atom"])
 #+end_src
 ~head~ возвращает голову списка
 ~tail~ формирует другой список, представляющий собою всё от первоначального списка, кроме головы
+~last~ - получить последний элемент
+~init~ - вернёт всё кроме последнего элемента
 ~length~ возвращает длину списка
+~null~ - проверка на пустоту
+~reverse~ - обращает список
+~take N [lst]~ - отбирает N элементов из списка
+~drop N [lst]~ - вырезает N элементов из списка
+~X 'elem' [lst]~ - проверяет, входит ли элемент в список
 Стандартный оператор ~:~ добавляет значение, являющееся левым операндом, в начало списка, являющегося правым операндом.
 ~!!~ - взять элемент по индексу
 ~take N~ - возвращает N первых элементов списка
 ~[2,4 ..]~ - бесконечный список чётных чисел
+~cycle []~ - зацикливает список в бесконечный
+~repeat X~ - делает бесконечный список из X
+~++~ - конкантенация списков
+~:~ - добавление в начало списка
+
+=Генераторы списков=
+
+#+begin_src haskell
+[x*2 | x <– [1..10]]
+#+end_src
+В выражении ~[x*2 | x <– [1..10]]~ мы извлекаем элементы из списка ~[1..10]~. Часть генератора, находящаяся левее вертикальной
+черты |, определяет значения элементов результирующего списка.
+Можно добавить предикат выборки
+#+begin_src haskell
+[x*2 | x <– [1..10], x*2 >= 12] -- Нам нужны только те элементы, которые, будучи удвоенными, больше либо равны 12.
+#+end_src
+Нужно выражение, которое заменяет каждое нечётное число больше 10 на БАХ!", а каждое нечётное число меньше 10 – на БУМ!". Если число чётное, мы выбрасываем его из нашего списка.
+#+begin_src haskell
+boomBangs xs = [if x < 10 then "БУМ!" else "БАХ!" | x <– xs, odd x]
+...
+boomBangs [7..13] -- ["БУМ!","БУМ!","БАХ!","БАХ!"]
+#+end_src
+Так же можно указывать несколько списков
+#+begin_src haskell
+[x+y | x <- [1,2,3], y <- [10,100,1000]] -- [11,101,1001,12,102,1002,13,103,1003]
+#+end_src
 
 =Синоним типа=
 
