add some doom settings notes

--- a/doom/Настройки.md
+++ b/doom/Настройки.md
@@ -25,6 +25,8 @@ export PATH="$HOME/.config/emacs/bin:$PATH"
 source .bashrc
 ```
 
+Если после этого запускается ванила, то нужно удалить папки ~/.emacs и ~/emacs.d
+
 нужные тулзы для go
 ```
 go install golang.org/x/tools/gopls@latest
