add some redis notes - types and operations

--- a/db/redis.org
+++ b/db/redis.org
@@ -23,17 +23,69 @@ docker run -it --network some-network --rm redis redis-cli -h some-redis
 
 =Redis= — это большая распределенная hash-таблица, где в качестве ключа используется произвольная строка, а в качестве значения — одна из поддерживаемых структур данных (строки, списки, хеш-таблицы, set, отсортированные set и т.д.).
 
+При работе с =Redis= важно не забывать про ещё одно его отличительное свойство: он ~однопоточный~. Это значит, что все операции чтения и записи данных происходят строго синхронно в одном потоке выполнения. Естественно, для удержания большого количества сетевых соединений и облегчения нагрузки на IO используются вспомогательные потоки. Но поток чтения/запиcи остаётся основным узким местом.
+
 Характеристики:
-+ Персистентность: есть два режима хранения — RDB (Redis database - периодически сохраняет снэпшот всего dataset. Для этого выполняется fork основного процесса и запускается процедура записи снэпшота — BGSAVE) и AOF (append only file - реализует журнал операций, где все новые операции просто дописываются в конец файла).
-+ Поддержка отказоустойчивости в различных топологиях на все случаи жизни и под любые задачи.
-+ Информационная безопасность: контроль доступа и шифрование данных.
-+ Configuration management и мониторинг.
++ =Персистентность=: есть два режима хранения — RDB (Redis database - периодически сохраняет снэпшот всего dataset. Для этого выполняется fork основного процесса и запускается процедура записи снэпшота — BGSAVE) и AOF (append only file - реализует журнал операций, где все новые операции просто дописываются в конец файла).
++ =Поддержка отказоустойчивости= в различных топологиях на все случаи жизни и под любые задачи.
++ =Информационная безопасность=: контроль доступа и шифрование данных.
++ =Configuration management= и мониторинг.
 
 Redis поддерживает различные топологии развёртывания:
 + =Один узел= или stand-alone. Самая простая топология. Имеет право на существование, но исключительно для сред разработки и тестирования, поскольку не является отказоустойчивой.
 + =Master-Replica= (Secondary). В такой топологии между мастером и репликой происходит постоянная асинхронная репликация. Для принудительной синхронизации, то есть для перехода на синхронный режим, в Redis есть специальная команда WAIT.
 + =Sentinel=. Эта топология развёртывания широко применялась на ранних версиях Redis, до поддержки полноценного кластера. Она состоит из отдельных специальных узлов, которые мониторят работу основных узлов Redis, отслеживают сбои Master и запускают процесс восстановления. Работает поверх топологии Master-Replica.
 + =Полноценный кластер=, который состоит из набора мастер-узлов и набора реплик (secondary-узлы). Для репликации используется протокол Gossip: распространение информации в нем идет способом, похожим на эпидемию — каждый узел передает информацию известным ему «соседям». Клиенты могут работать как с мастером, так и с репликой, но с реплики идет только чтение.
+
+* Ключи
+=Redis= — хранилище данных в формате «ключ-значение».
+Факты о ключах:
+- Ключи в Redis — бинарно-безопасные (binary safe) строки.
+- Слишком длинные ключи — плохая идея, не только из-за занимаемой памяти, но так же и в связи с увеличением времени поиска определенного ключа в множестве в связи с дорогостоящим сравнением.
+- Хорошая идея — придерживаться схемы при построении ключей: «object-type:id:field».
+
+* Типы данных
+- =Строки= (strings). Базовый тип данных Redis. Строки в Redis бинарно-безопасны, могут использоваться так же как числа, ограничены размером 512 Мб.
+- =Списки= (lists). Классические списки строк, упорядоченные в порядке вставки, которая возможна как со стороны головы, так и со стороны хвоста списка. Максимальное количество элементов — 2^32 — 1.
+- =Множества= (sets). Множества строк в математическом понимании: не упорядочены, поддерживают операции вставки, проверки вхождения элемента, пересечения и разницы множеств. Максимальное количество элементов — 2^32 — 1.
+- =Хеш-таблицы= (hashes). Классические хеш-таблицы или ассоциативные массивы. Максимальное количество пар «ключ-значение» — 2^32 — 1.
+- =Упорядоченные множества= (sorted sets). Упорядоченное множество отличается от обычного тем, что его элементы упорядочены по особому параметру «score». ZSet — упорядоченное множество. Идеально для выбора данных по временному диапазону, например, метрики. Но можно использовать и как очередь с приоритетом, например, для уведомлений или событий. И что еще важно: ZSet реализован не через дерево, как можно было бы подумать, а через хэшмап с дополнительным скип-индексом.
+
+* Основные команды
+1. SET key value [EX seconds] - Сохраняет строковое значение по ключу. Можно задать таймаут: время через которое ключ автоматически удалится из базы.
+#+begin_src go
+result, err := c.Set(ctx, key, value, ttl).Result()
+#+end_src
+
+2. GET key - GET key достаёт строковое значение по ключу.
+#+begin_src go
+result, err := c.Get(ctx, key).Result()
+#+end_src
+
+3. SADD key member - Добавляет значение в множество, хранящееся по ключу. Если такого множества ещё нет — создаёт. Но SADD key member не позволяет задать таймаут: значения из множеств надо удалять самому.
+#+begin_src go
+result, err := c.SAdd(ctx, key, member).Result()
+#+end_src
+
+4. SREM key member [member...] - Удаляет значение из множества, хранящегося по ключу. Если это было последнее значение — сам ключ тоже будет удалён.
+#+begin_src go
+result, err := c.SRem(ctx, key, members).Result()
+#+end_src
+
+5. ZADD key member - ZADD и ZREM работают аналогично SADD и SREM, но с упорядоченными множествами.
+#+begin_src go
+result, err := c.ZAdd(ctx, key, member).Result()
+#+end_src
+
+6. ZRANGE key start stop [BYSCORE | BYLEX] [REV] [LIMIT offset count] - Быстро выбирает из упорядоченного множества значения в заданном диапазоне. Можно дополнительно задать количество и сдвиг значений, чтобы реализовать, например, пагинацию.
+#+begin_src go
+result, err := c.ZRangeByScore(ctx, key, &redis.ZRangeBy{
+  Min: strconv.FormatInt(from, 10),
+  Max: strconv.FormatInt(to, 10),
+  Count: int64(limitCount),
+  Offset: int64(limitOffset),
+}).Result()
+#+end_src
 
 * Простой пример
 Сначала нужно установить коннектор и запустить redis
