add redis types notes

--- a/db/типы данных в redis.org
+++ b/db/типы данных в redis.org
@@ -138,3 +138,114 @@ func main() {
 - Операции с наборами, такие как объединение, пересечение и разность, являются эффективными.
 
 * Упорядоченное множество (Sorted set)
+Упорядоченная коллекция уникальных строк, хранящихся в отсортированном виде в соответствии с ассоциированным ключом.
+Если два или более ключа имеют одинаковое значение, строки упорядочиваются в лексикографическом порядке.
+Это похоже на Redis Set, с той лишь разницей, что Sorted Set представляет данные в отсортированном или упорядоченном виде.
+
+Основные команды, используемые для задания типов данных в Redis:
+- ZADD: эта команда добавит элемент в упорядоченный набор, если элемент уже присутствует, то значение ключа будет обновлено.
+- ZRANGE: эта команда возвращает элементы отсортированного набора в заданном диапазоне.
+- ZRANK: эта команда возвращает ранг указанного элемента в отсортированном (по возрастанию) списке
+- ZREVRANK: эта команда возвращает ранг указанного элемента в отсортированном (по убыванию) списке
+
+#+begin_src go
+func main() {
+	key := "string:zset"
+	set := []redis.Z{
+		{Score: 80, Member: "Java"},
+		{Score: 90, Member: "Python"},
+		{Score: 95, Member: "Golang"},
+		{Score: 98, Member: "PHP"},
+	}
+	err := cache.ZAdd(key, set)
+	if err != nil {
+		fmt.Println(err)
+	}
+	scores, _ := cache.ZRevRangeWithScores(key, 0, 2)
+	fmt.Println(scores)
+	cache.ZIncrBy(key, 5, "Golang")
+	scores, _ = cache.ZRevRangeWithScores(key, 0, 2)
+	fmt.Println("After the points ----")
+	fmt.Println(scores)
+}
+#+end_src
+
+Как Redis Хранит отсортированные заданные типы данных?
+- Отсортированные множества сочетают в себе свойства множеств и упорядоченных списков.
+- Каждый элемент в отсортированном множестве связан со значением, и элементы хранятся в порядке возрастания их значений.
+- Отсортированные множества полезны для ранжирования и составления рейтингов.
+
+* Потоки (Streams)
+Поток Redis — это структура данных, которая работает как журнал с возможностью только добавления, но также реализует несколько операций, позволяющих преодолеть некоторые ограничения обычного журнала с возможностью только добавления. К ним относятся произвольный доступ за время O(1) и сложные стратегии потребления, такие как группы потребителей.
+
+Основные команды, используемые в потоках в Redis:
+- XADD — эта команда добавит элемент в поток.
+- XREAD — эта команда прочитает одну или несколько записей.
+- XRANGE — эта команда возвращает записи в заданном диапазоне.
+- XLEN — эта команда возвращает длину потока.
+
+Как Redis хранит типы данных Streams?
+- Потоки реализованы в виде журнала с возможностью только добавления записей.
+- Каждый поток имеет уникальный ключ и состоит из последовательности записей с уникальными идентификаторами.
+- Потоки используются для хранения и обработки данных на основе событий и журналов.
+
+* HyperLogLog
+HyperLogLog — это вероятностная структура данных, которая оценивает мощность множества.
+Будучи вероятностной структурой данных, HyperLogLog жертвует идеальной точностью ради эффективного использования пространства.
+
+Основные команды, используемые в HyperLogLog в Redis:
+- PFADD: Эта команда добавит элемент в HyperLogLog.
+- PFADD: Эта команда подсчитает количество элементов в наборе.
+- PFMERGE: Эта команда объединит два или более HyperLog в один.
+
+Как Redis хранит типы данных HyperLogLog?
+- HyperLogLogs используют вероятностные структуры данных для оценки мощности (количества уникальных элементов) множества.
+- Они используют минимальный объём памяти для получения приблизительных результатов.
+
+* Растровые изображения в Redis
+Растровые изображения — это не фактический тип данных, а набор битовых операций, определённых для типа String, который рассматривается как битовый вектор.
+Поскольку строки являются двоичными безопасными объектами и их максимальная длина составляет 512 МБ, они подходят для установки до 2^32 различных битов.
+
+Основные команды, используемые в растровых изображениях в Redis:
+- SETBIT: Эта команда используется для установки бита в 0 из 1 и в 1 из 0.
+- GETBIT: Эта команда используется для возврата значения бита с заданным смещением.
+- BITOP: Эта команда используется для выполнения побитовых операций с одной или несколькими строками.
+
+Как Redis хранит типы данных растровых изображений?
+- Растровые изображения реализованы в виде массива битов.
+- Redis предоставляет операции на уровне битов для установки, очистки и управления отдельными битами в растровом изображении.
+- Растровые изображения используются в различных приложениях, включая аналитику и отслеживание поведения пользователей.
+
+* Битовые поля в Redis
+Битовые поля Redis позволяют устанавливать, увеличивать и получать целочисленные значения с любым количеством бит.
+Например, вы можете работать с любыми числами — от 63-битных чисел со знаком до 1-битных целых чисел без знака.
+
+Основные команды, используемые в битовых полях в Redis:
+- BITFIELD : эта команда атомарно устанавливает, увеличивает и считывает одно или несколько значений.
+- BITFIELD_RO: эта команда является вариантом BITFIELD
+
+* Вероятностные типы
+Вероятностные структуры данных используются для получения приблизительных ответов или оценок для определённых операций с меньшим использованием памяти по сравнению с точными структурами данных.
+Одной из наиболее часто используемых вероятностных структур данных в Redis является =HyperLogLog= (HLL). Она используется для оценки мощности (количества уникальных элементов) множества.
+Redis также предлагает другую вероятностную структуру данных под названием =фильтры Блума=. Она проверяет наличие элемента в множестве. Фильтры Блума полезны для быстрой проверки принадлежности к большому набору данных без необходимости хранить весь набор данных в памяти. Фильтры Блума — это вероятностная структура данных, которая проверяет наличие элемента в наборе.
+
+* Геопространственные индексы в Redis
+Геопространственные индексы Redis помогают нам хранить координаты и искать их. Эта структура данных полезна для поиска ближайших точек.
+
+Основные команды, используемые в геопространственной индексации в Redis:
+- GEOADD— эта команда добавляет местоположение в заданную геопространственную команду.
+- GEOSEARCH- эта команда возвращает местоположение заданной точки.
+
+* Временные ряды в Redis
+Чтобы создать структуру данных временных рядов в Redis, вы можете использовать отсортированные наборы (Zsets) или потоки в зависимости от ваших конкретных требований.
+
+- Отсортированные наборы (Z-наборы):Вы можете использовать отсортированный набор Redis для хранения данных временных рядов, где значение представляет собой метку времени, а элемент — точку данных.
+- Потоки:Потоки Redis — ещё один вариант для управления данными временных рядов. Потоки больше подходят для потоковой передачи событий в реальном времени и ведения журналов.
+
+Redis эффективно управляет памятью для этих типов данных и предлагает различные команды для выполнения операций с ними. Кроме того, Redis обеспечивает сохранение данных с помощью таких механизмов, как моментальные снимки и журналы упреждающей записи, гарантируя надёжность данных.
+
+* TODO
+- [ ] - Добавить пример в потоки
+- [ ] - Добавить пример в hyperloglog
+- [ ] - Добавить пример в геоданные
+- [ ] - Добавить пример в фильтр блума
