--- a/IT/кэширование.org
+++ b/IT/кэширование.org
@@ -132,3 +132,9 @@ AverageTime = DBAccessTime * CacheMissRate + CacheAccessTime
 
 * Версионирование кэша
 К ключу добавляется тэг версии. Затем данные инвалидируются для конкретной версии.
+
+* Типичные случаи сбоев в работе кеша и способы их решения
+- =Thundering herd problem=: возникает, когда множество ключей в кеше истекают одновременно. Тогда все запросы напрямую обращаются к базе данных, перегружая её. Устанавливать случайный TTL.
+- =Cache penetration=: случается, когда ключ отсутствует и в кеше, и в базе данных. Приложение не может найти нужные данные и обновить кеш, что создаёт нагрузку и на кеш, и на БД. Использовать фильтр Блума для проверки ключей.
+- =Cache breakdown=: возникает, когда «горячий» ключ (часто запрашиваемые данные) истекает, и множество запросов обращаются к базе данных. Не ставить TTL для горячих ключей.
+- =Cache crash=: возникает, когда кеш выходит из строя, и все запросы направляются напрямую в базу данных. Использовать кэш-кластер.
