add notes howto run rmq via docker

--- a/queue/Что такое RabbitMQ.org
+++ b/queue/Что такое RabbitMQ.org
@@ -59,3 +59,54 @@ RabbitMQ основан на протоколе AMQP (Advanced Message Queuing P
 2. Headers — содержит дополнительную информацию для сложной маршрутизации и используется обменником типа Headers. Иногда может быть нужно выполнить маршрутизацию в зависимости от одного какого-то ключа. Чаще можно столкнуться с необходимостью выполнить проверку нескольких условий. Эти условия можно указать как атрибуты в поле заголовка (Headers) и затем использовать их в брокере для более сложной маршрутизации.
 3. Properties — характеристики сообщений, наиболее важными из них являются тип (Content_type) и кодировка (Content_encoding).
 4. Delivery mode — режим доставки, сохранение опубликованных сообщений до момента их передачи потребителю. Выделяют две разновидности режима доставки: Persistent — постоянная, то есть сохранение сообщений; Non-persistent — непостоянная, несохранение сообщений.
+
+* Запуск RabbitMQ через Docker
+Выполните следующую команду в терминале:
+#+begin_src
+docker run -d --name rabbitmq -p 5672:5672 -p 15672:15672 rabbitmq:management
+#+end_src
+Объяснение параметров:
+=-d=: Запускает контейнер в фоновом режиме.
+=--name rabbitmq=: Назначает имя контейнера (rabbitmq).
+=-p 5672:5672=: Проброс порта AMQP (5672) для взаимодействия с RabbitMQ.
+=-p 15672:15672=: Проброс порта HTTP (15672) для доступа к веб-интерфейсу управления RabbitMQ.
+=rabbitmq:management=: Использует образ RabbitMQ с поддержкой веб-интерфейса управления.
+
+Чтобы проверить, что контейнер запущен, выполните:
+#+begin_src
+docker ps
+#+end_src
+В выводе вы должны увидеть контейнер с именем =rabbitmq=.
+
+RabbitMQ предоставляет удобный веб-интерфейс для управления очередями, пользователями и другими компонентами.
+Откройте браузер и перейдите по адресу:
+http://localhost:15672
+Войдите с учетными данными по умолчанию:
+Логин: guest
+Пароль: guest
+
+Остановка контейнера:
+#+begin_src
+docker stop rabbitmq
+#+end_src
+Удаление контейнера:
+#+begin_src
+docker rm rabbitmq
+#+end_src
+
+Дополнительные настройки:
+ 1. Создание пользователей
+    По умолчанию пользователь guest доступен только из localhost. Для создания нового пользователя выполните:
+#+begin_src
+docker exec -it rabbitmq rabbitmqctl add_user myuser mypassword
+docker exec -it rabbitmq rabbitmqctl set_user_tags myuser administrator
+docker exec -it rabbitmq rabbitmqctl set_permissions -p / myuser ".*" ".*" ".*"
+#+end_src
+ 2. Проброс данных в volume
+    Если вам нужно сохранять конфигурацию и данные RabbitMQ между перезапусками контейнера, используйте volume:
+#+begin_src
+docker run -d --name rabbitmq \
+  -p 5672:5672 -p 15672:15672 \
+  -v rabbitmq_data:/var/lib/rabbitmq \
+  rabbitmq:management
+#+end_src
